--- a/resources/css/ui-plugins.css
+++ b/resources/css/ui-plugins.css
@@ -365,7 +365,7 @@ div:where(.swal2-container) button:where(.swal2-close):hover {}
 
 /* datepicker-wrap */
 .datepicker-wrap .ui-widget.ui-widget-content {border:0;background-color:var(--white-100);color:var(--typography-black);border-radius:0;font-family:inherit;font-size:inherit;width:auto;padding:16px 0 0;height:425px;}
-.datepicker-wrap .ui-datepicker .ui-datepicker-header {padding:0;border-radius:0;border:0;background-color:var(--white-100);font-size:26px;font-weight:500;color:var(--typography-black);}
+.datepicker-wrap .ui-datepicker .ui-datepicker-header {padding:0;border-radius:0;border:0;background-color:var(--white-100);margin-bottom:20px;font-size:26px;font-weight:500;color:var(--typography-black);}
 .datepicker-wrap .ui-datepicker .ui-datepicker-prev,
 .datepicker-wrap .ui-datepicker .ui-datepicker-next {top:0;width:52px;height:52px;background-color:var(--surface-surface50);border-radius:50%;display:flex;align-items:center;justify-content:center;}
 .datepicker-wrap .ui-datepicker .ui-datepicker-prev:active,
@@ -378,7 +378,7 @@ div:where(.swal2-container) button:where(.swal2-close):hover {}
 .datepicker-wrap .ui-widget-content .ui-state-hover, 
 .datepicker-wrap .ui-widget-header .ui-state-hover, 
 .datepicker-wrap .ui-widget-content .ui-state-focus, 
-.datepicker-wrap .ui-widget-header .ui-state-focus {border:0;background-color:var(--surface-surface200);}
+.datepicker-wrap .ui-widget-header .ui-state-focus {border:0;background-color:transparent;}
 .datepicker-wrap .ui-datepicker .ui-datepicker-next,
 .datepicker-wrap .ui-datepicker .ui-datepicker-next-hover {right:0;}
 .datepicker-wrap .ui-datepicker .ui-datepicker-prev,
@@ -386,9 +386,10 @@ div:where(.swal2-container) button:where(.swal2-close):hover {}
 .datepicker-wrap .ui-datepicker .ui-datepicker-prev span, 
 .datepicker-wrap .ui-datepicker .ui-datepicker-next span {margin:0;}
 
-.datepicker-wrap .ui-datepicker .ui-datepicker-title {margin:0 52px;line-height:52px;}
+.datepicker-wrap .ui-datepicker .ui-datepicker-title {display:flex;gap:4px;margin:0 52px;line-height:52px;align-items:center;justify-content:center;}
 
-.datepicker-wrap .ui-datepicker table {table-layout:fixed;margin:0 auto;font-size:inherit;border-collapse:separate;}
+.datepicker-wrap .ui-datepicker table {position:relative;table-layout:fixed;margin:0 auto;font-size:inherit;border-collapse:separate;}
+.datepicker-wrap .ui-datepicker table tbody {clip:auto!important;width:100%!important;}
 
 .datepicker-wrap .ui-datepicker-calendar thead th {color:var(--gray-400);}
 .datepicker-wrap .ui-datepicker-calendar tbody td {color:var(--typography-black);}
@@ -398,8 +399,8 @@ div:where(.swal2-container) button:where(.swal2-close):hover {}
 .datepicker-wrap .ui-datepicker-calendar td.ui-datepicker-other-month {}
 .datepicker-wrap .ui-datepicker-calendar td.ui-datepicker-other-month span,
 .datepicker-wrap .ui-datepicker-calendar td.ui-datepicker-other-month a {color:var(--gray-400);}
-.datepicker-wrap .ui-datepicker td span,
-.datepicker-wrap .ui-datepicker td a {position:relative;padding:0;text-align:center;border:0;background:none;font-weight:inherit;color:inherit;width:40px;height:100%;border-radius:8px;margin:0 auto;}
+.datepicker-wrap .ui-datepicker-calendar td span,
+.datepicker-wrap .ui-datepicker-calendar td a {position:relative;padding:0;text-align:center;border:0;background:none;font-weight:inherit;color:inherit;width:40px;height:100%;border-radius:8px;margin:0 auto;}
 
 .datepicker-wrap .ui-state-active,
 .datepicker-wrap .ui-widget-content .ui-state-active,
@@ -413,6 +414,15 @@ div:where(.swal2-container) button:where(.swal2-close):hover {}
 
 .datepicker-wrap .ui-datepicker .ui-datepicker-buttonpane {display:flex;margin:0;}
 
+.datepicker-wrap-month .ui-widget.ui-widget-content {height:auto;}
+.datepicker-wrap-month .ui-datepicker .ui-datepicker-header {font-size:0;gap:0;}
+.datepicker-wrap-month .ui-datepicker .ui-datepicker-header span {font-size:26px;font-weight:500;color:var(--typography-black);}
+.datepicker-wrap-month .ui-datepicker .ui-datepicker-month {display:none;}
+.datepicker-wrap-month .ui-datepicker-calendar td span,
+.datepicker-wrap-month .ui-datepicker-calendar td a {display:flex;text-align:center;height:40px;width:100%;align-items:center;justify-content:center;border-radius:50px;background-color: var(--button-outlined-enabled);color: var(--button-outlined-onEnabled);border-color: var(--button-outlined-border);border-style: solid;border-width: 1px;}
+
+
+/* .datepicker-wrap tbody {position:relative!important;} */
 .datepicker-wrap tbody .ui-datepicker-week-end:first-child {color:var(--red-400);}
 .datepicker-wrap tbody .ui-datepicker-week-end:last-child {color:var(--blue-400);}
 .schedule-wrap {position:absolute;left:0;bottom:1px;width:100%;height:6px;display:flex;align-items:center;justify-content:center;gap:2px;}
