--- a/html/components/component_datepicker.html
+++ b/html/components/component_datepicker.html
@@ -77,9 +77,9 @@
 			<h2>Year</h2>
 			<div class="guide-column-list">
 				<div class="input-wrap input-datepicker">
-					<button type="button" aria-label="대상기간 시작일" data-micromodal-trigger="modal-datepicker-month">2023-11</button>
+					<button type="button" aria-label="대상기간 시작일" data-micromodal-trigger="modal-datepicker-month1">2023-11</button>
 					<div class="bul">-</div>
-					<button type="button" aria-label="대상기간 종료일" data-micromodal-trigger="modal-datepicker-month">2024-10</button>
+					<button type="button" aria-label="대상기간 종료일" data-micromodal-trigger="modal-datepicker-month2">2024-10</button>
 				</div>
 			</div>
 		</div>
@@ -98,7 +98,7 @@
 			<h2>datepicker inline</h2>
 			<div class="guide-column-list">
 				<div class="datepicker-wrap">
-					<div aria-label="날짜 선택" id="my_date_picker" class="datepicker-trigger"></div>
+					<div aria-label="날짜 선택" class="datepicker-trigger" id="datepicker_schedule"></div>
 				</div>
 			</div>
 		</div>
@@ -107,7 +107,7 @@
 
 
 	<!-- micromodal -->
-	<div class="micromodal-slide micromodal-slide-bottom modal" id="modal-datepicker-month" aria-hidden="true">
+	<div class="micromodal-slide micromodal-slide-bottom modal" id="modal-datepicker-month1" aria-hidden="true">
 		<div class="modal__overlay" tabindex="-1" data-micromodal-close>
 			<div class="modal__container" role="dialog" aria-modal="true">
 
@@ -118,8 +118,31 @@
 				<div class="modal__content">
 
 					<div class="content">
-						<div class="datepicker-wrap">
-							<div class="jquery-datepicker-month datepicker-trigger"></div>
+						<div class="datepicker-wrap datepicker-wrap-month">
+							<div class="datepicker-trigger" id="datepicker_month1"></div>
+						</div>
+					</div>
+
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- //micromodal -->
+
+	<!-- micromodal -->
+	<div class="micromodal-slide micromodal-slide-bottom modal" id="modal-datepicker-month2" aria-hidden="true">
+		<div class="modal__overlay" tabindex="-1" data-micromodal-close>
+			<div class="modal__container" role="dialog" aria-modal="true">
+
+				<div class="modal__header modal__header__alert">
+					<strong class="modal__title title-large"></strong>
+					<button type="button" class="modal__close" aria-label="팝업 닫기" data-micromodal-close></button>
+				</div>
+				<div class="modal__content">
+
+					<div class="content">
+						<div class="datepicker-wrap datepicker-wrap-month">
+							<div class="datepicker-trigger" id="datepicker_month2"></div>
 						</div>
 					</div>
 
@@ -143,7 +166,7 @@
 				<div class="modal__content">
 					<div class="content">
 						<div class="datepicker-wrap">
-							<div class="jquery-datepicker datepicker-trigger"></div>
+							<div class="datepicker-trigger" id="datepicker"></div>
 						</div>
 					</div>
 				</div>
@@ -153,8 +176,8 @@
 	<!-- //micromodal -->
 
 	<script>
-		const modalTrigger1 = document.querySelectorAll('[data-micromodal-trigger="modal-datepicker"]')
-		modalTrigger1.forEach(function(button) {
+		const modalTrigger = document.querySelectorAll('[data-micromodal-trigger="modal-datepicker"]')
+		modalTrigger.forEach(function(button) {
 
 			button.addEventListener("click", function(event) {
 				MicroModal.show('modal-datepicker', {
@@ -167,7 +190,7 @@
 					awaitCloseAnimation: true, // [9]
 					// debugMode: true // [10]
 					onShow: function(modalPopup) {
-						$(".jquery-datepicker").datepicker({
+						$("#datepicker").datepicker({
 							dateFormat: 'yy-mm-dd',
 							prevText: '이전 달',
 							nextText: '다음 달',
@@ -197,10 +220,10 @@
 	</script>
 
 	<script>
-		const modalTrigger2 = document.querySelectorAll('[data-micromodal-trigger="modal-datepicker-month"]')
-		modalTrigger2.forEach(function(button) {
+		const monthTrigger1 = document.querySelectorAll('[data-micromodal-trigger="modal-datepicker-month1"]')
+		monthTrigger1.forEach(function(button) {
 			button.addEventListener("click", function(event) {
-				MicroModal.show('modal-datepicker-month', {
+				MicroModal.show('modal-datepicker-month1', {
 					// openTrigger: 'data-custom-open', // [3]
 					// closeTrigger: 'data-custom-close', // [4]
 					// openClass: 'is-open', // [5]
@@ -210,21 +233,15 @@
 					awaitCloseAnimation: true, // [9]
 					// debugMode: true // [10]
 					onShow: function() {
-						$('.jquery-datepicker-month').monthpicker({
+						$('#datepicker_month1').monthpicker({
 							dateFormat: 'yy-mm',
 							prevText: '이전 달',
 							nextText: '다음 달',
 							monthNames: ["1월", "2월", "3월", "4월", "5월", "6월", "7월", "8월", "9월", "10월", "11월", "12월"],
 							monthNamesShort: ['1월', '2월', '3월', '4월', '5월', '6월', '7월', '8월', '9월', '10월', '11월', '12월'],
-							dayNames: ['일', '월', '화', '수', '목', '금', '토'],
-							dayNamesShort: ['일', '월', '화', '수', '목', '금', '토'],
-							dayNamesMin: ['일', '월', '화', '수', '목', '금', '토'],
 							showMonthAfterYear: true,
-							yearSuffix: '년',
-							// minDate: 0,
 							showButtonPanel: true,
 							closeText: "닫기",
-							showOtherMonths: true,
 							onSelect: function(input, date) {
 								MicroModal.close('modal-datepicker-month');
 								button.innerText = input;
@@ -232,7 +249,42 @@
 						});
 					},
 					onClose: function() {
-						$(".jquery-datepicker-month").datepicker("destroy")
+						// $("#datepicker_month").datepicker("destroy")
+					}
+				});
+			});
+		})
+
+		const monthTrigger2 = document.querySelectorAll('[data-micromodal-trigger="modal-datepicker-month2"]')
+		monthTrigger2.forEach(function(button) {
+			button.addEventListener("click", function(event) {
+				MicroModal.show('modal-datepicker-month2', {
+					// openTrigger: 'data-custom-open', // [3]
+					// closeTrigger: 'data-custom-close', // [4]
+					// openClass: 'is-open', // [5]
+					disableScroll: true, // [6]
+					disableFocus: true, // [7]
+					awaitOpenAnimation: true, // [8]
+					awaitCloseAnimation: true, // [9]
+					// debugMode: true // [10]
+					onShow: function() {
+						$('#datepicker_month2').monthpicker({
+							dateFormat: 'yy-mm',
+							prevText: '이전 달',
+							nextText: '다음 달',
+							monthNames: ["1월", "2월", "3월", "4월", "5월", "6월", "7월", "8월", "9월", "10월", "11월", "12월"],
+							monthNamesShort: ['1월', '2월', '3월', '4월', '5월', '6월', '7월', '8월', '9월', '10월', '11월', '12월'],
+							showMonthAfterYear: true,
+							showButtonPanel: true,
+							closeText: "닫기",
+							onSelect: function(input, date) {
+								MicroModal.close('modal-datepicker-month');
+								button.innerText = input;
+							},
+						});
+					},
+					onClose: function() {
+						// $("#datepicker_month").datepicker("destroy")
 					}
 				});
 			});
@@ -245,23 +297,25 @@
 			const schedule02 = ["2024-12-15", "2024-12-16", "2024-12-18", "2024-12-20"]; // 고객 생일
 			const schedule03 = ["2024-12-15", "2024-12-17", "2024-12-18", "2024-12-21"]; // 수신 만기
 
-			$("#my_date_picker").datepicker({
+			$("#datepicker_schedule").datepicker({
 				dateFormat: 'yy-mm-dd',
 				prevText: '이전 달',
 				nextText: '다음 달',
-				monthNames: ['1월', '2월', '3월', '4월', '5월', '6월', '7월', '8월', '9월', '10월', '11월', '12월'],
-				monthNamesShort: ['1월', '2월', '3월', '4월', '5월', '6월', '7월', '8월', '9월', '10월', '11월', '12월'],
+				monthNames: ['1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '11', '12'],
+				monthNamesShort: ['1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '11', '12'],
 				dayNames: ['일', '월', '화', '수', '목', '금', '토'],
 				dayNamesShort: ['일', '월', '화', '수', '목', '금', '토'],
 				dayNamesMin: ['일', '월', '화', '수', '목', '금', '토'],
 				showMonthAfterYear: true,
-				yearSuffix: '년',
+				yearSuffix: '.',
 				// minDate: 0,
 				showButtonPanel: true,
 				closeText: "닫기",
 				showOtherMonths: true,
 				onSelect: function(date, dp) {},
-				onChangeMonthYear: function(month, year, dp) {},
+				onChangeMonthYear: function(year, month, dp) {
+					console.log(month)
+				},
 				beforeShowDay: function(date) {
 					var formattedDate = $.datepicker.formatDate('yy-mm-dd', date);
 
@@ -322,31 +376,29 @@
 				})
 			}
 
-
 			$(document).on('click', '.ui-datepicker-next', function() {
-				// $(".ui-datepicker-title>span").hide().show(100);
-				$(".ui-datepicker-calendar").hide('slide', {
+				$('body').find('.datepicker-wrap').find('.ui-datepicker:visible tbody').hide('slide', {
 					direction: 'left'
-				}, 100).show('slide', {
+				}, 1).show('slide', {
 					direction: 'right'
-				}, 0)
+				}, 250)
 			})
 
 			$(document).on('click', '.ui-datepicker-prev', function() {
-				$(".ui-datepicker-calendar").hide('slide', {
+				$('body').find('.datepicker-wrap').find('.ui-datepicker:visible tbody').hide('slide', {
 					direction: 'right'
-				}, 100).show('slide', {
+				}, 1).show('slide', {
 					direction: 'left'
-				}, 0)
+				}, 250)
 			})
 
 
-			$('.datepicker-trigger').swipe({
-				swipeRight: function() {
-					$(this).find("[data-handler='prev']").click();
-				},
+			$('.datepicker-wrap').swipe({
 				swipeLeft: function() {
-					$(this).find("[data-handler='next']").click();
+					$(this).find("[data-handler='next']").trigger('click');
+				},
+				swipeRight: function() {
+					$(this).find("[data-handler='prev']").trigger('click');
 				}
 			})
 
