--- a/html/components/component_datepicker.html
+++ b/html/components/component_datepicker.html
@@ -243,7 +243,7 @@
 							showButtonPanel: true,
 							closeText: "닫기",
 							onSelect: function(input, date) {
-								MicroModal.close('modal-datepicker-month');
+								MicroModal.close('modal-datepicker-month1');
 								button.innerText = input;
 							},
 						});
