--- a/html/components/component_icon.html
+++ b/html/components/component_icon.html
@@ -348,6 +348,20 @@
 					<i class="icon-only icon-12 icon-close bg-icon-default"></i>
 				</div>
 			</div>
+			<hr>
+			<div class="ui-guide-box">
+				<h2>icon-nodata</h2>
+				<div class="guide-column-list">
+					<i class="icon-only icon-48 icon-nodata bg-icon-gray_2"></i>
+					<i class="icon-only icon-36 icon-nodata bg-icon-gray_2"></i>
+					<i class="icon-only icon-32 icon-nodata bg-icon-gray_2"></i>
+					<i class="icon-only icon-28 icon-nodata bg-icon-gray_2"></i>
+					<i class="icon-only icon-24 icon-nodata bg-icon-gray_2"></i>
+					<i class="icon-only icon-20 icon-nodata bg-icon-gray_2"></i>
+					<i class="icon-only icon-14 icon-nodata bg-icon-gray_2"></i>
+					<i class="icon-only icon-12 icon-nodata bg-icon-gray_2"></i>
+				</div>
+			</div>
 
 		</div>
 	</div>
